# tiktok_tickets

./: .env  .gitignore  README  app.py  pyproject.toml  timeseries.py  tt_data_collect.py  tt_parse_data.py
.github/ISSUE_TEMPLATE/: new-feature.md
backend/: .gitignore  app.py  login_page.py  main.py  pyproject.toml  tiktok_data_parsers.py  timeseries.py  tt_data_collect.py
backend/templates/: base.html
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: data-upload-form.tsx  donut-charts.tsx  user-auth-form.tsx
frontend/lib/: http.ts
frontend/utils/: data-parse.tsx
server/: README.md  main.py  tt_data_collect.py  tt_parse_data.py
templates/: home.html  login.html
