[tool.poetry]
name = "tiktok-project"
version = "0.1.0"
description = ""
authors = ["Kunal Sharda <ksharda@cmu.edu>", "Jayden Edara <aedara@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
bs4 = "^0.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
pandas = "^2.0.1"
supabase = "^1.0.3"
mypy = "^1.3.0"
requests = "^2.31.0"
email-validator = "^2.0.0.post2"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
